[project]
name = "youtube-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "google-genai>=1.31.0",
    "google-generativeai>=0.8.5",
    "langchain>=0.3.27",
    "langchain-chroma>=0.2.5",
    "langchain-google-genai>=2.0.10",
    "python-dotenv>=1.1.1",
    "streamlit>=1.48.1",
    "youtube-transcript-api==1.2.2",
]
